2003-01-09  Per Bothner  <per@bothner.com>

	* Buffer.java (insert):  Remove xpos parameters.
	* Marker.java:  Update for gnu.lists changes.

2002-11-15  Per Bothner  <per@bothner.com>

	* EKeyMap.java: Print-name of Symbol may require getName, not toString.

2002-03-24  Per Bothner  <per@bothner.com>

	* BufferWriter.java:  Factor out Swing dependencies.
	* EToolkit.java (getFace, setUnderlone, setBold, setForeground,
	setBackground):  New abstract methods. 
	* InputStreamHandler.java:  Remove unneeded import.
	* Buffer.java (openReader):  New abstract method.
	(currentColumn):  Use openReader method.
	* Marker.java (moveToColumn):  Likewise.

	* BufferContent.java:  Moved to gnu.buffer.swing.
	* BufferReader.java:  Moved to gnu.buffer.swing.
	* MarkerReader.java:  Moved to gnu.buffer.swing.

	* ProcessMode.java (<clinit>):  Don't use setDefaultBinding.
	Define enterAction for "\r" and "return".  

	+ ReplBuffer.java:  Removed - use ReplMode instead.
	* ReplMode.java:  New class - extends ProcessMode.
	* emacs.scm:  Remove ReplBuffer stuff to use ReplMode instead.
	* Makefile.am: Update accordingly.

	* emacs.scm (window-pixel-height, window-pixel-widt):  Fix.

	* BufferWriter.java (write1):  Handle '\t', and ignore (for now) '\r'.

2002-03-19  Per Bothner  <per@bothner.com>

	Move some Swing-specific code into gnu.jemacs.swing.
	* Buffer.java:  Make abstract.  Move Swing code to SwingBuffer.
	Make some methods abstract.
	* BufferKeymap.java:  Removed class - partly replaced by EKeymap.
	* EKeymap.java: New class, extends RangeTable.
	Move some keymap searching and command handling here, for now.
	* Window.java:  Removed class, replaced by EWindow.
	* EWindow.java:  New abstract class.
	* EToolkit.java:  New abstract class.
	* Frame.java:  Renamed to EFrame.java.
	* EFrame.java:  Move Swing-specific code to SwingBuffer.
	* InsertAction.java:  Removed, replaced by SelfInsertCommand.
	* SelfInsertCommand.java:  New class, extends Procedure0or1.