@@ -1,3 +1,11 @@
+2003-05-17  Per Bothner  <per@bothner.com>
+
+	* EWindow.java (setFrame):  New method.
+	(unlink):  If unlinking last windows, set frame's firstWindow to null.
+	(delete):  Don't call unlink here.
+	(deleteNoValidate):  Call it here instead.
+	* EFrame.java (delete):  Fix loop over windows.
+
 2003-01-09  Per Bothner  <per@bothner.com>
 
 	* Buffer.java (insert):  Remove xpos parameters.
